test/expected/ins_ns_typedef_i.out
inline namespace A::B { typedef int Int; }
                 ^
18: error: nested namespace can not be inline
